# webcolors-stubs

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
tests/: definitions.py  full_colors.py  test_html5.py
webcolors-stubs/: __init__.pyi  _conversion.pyi  _definitions.pyi  _html5.pyi  _normalization.pyi  _types.pyi
